# bevy_xpbd

./: Cargo.toml
crates/benches_common_3d/: Cargo.toml
crates/bevy_xpbd_2d/: Cargo.toml
crates/bevy_xpbd_3d/: Cargo.toml
crates/examples_common_2d/: Cargo.toml
crates/examples_common_2d/src/: lib.rs
crates/examples_common_3d/: Cargo.toml
crates/examples_common_3d/src/: lib.rs
src/plugins/: prepare.rs  setup.rs  sync.rs
