[package]
name = "benches_common_3d"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.12.0-dev", default-features = false }
bevy_xpbd_3d = { path = "../bevy_xpbd_3d", default-features = false }
criterion = "0.4"

[patch.crates-io]
bevy = { git = "https://github.com/bevyengine/bevy.git", branch = "main" }
